--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "source.addMissingImports",
     "source.fixAll.format",
     "source.fixAll.eslint"
-  ]
+  ],
+  "cSpell.language": "en,pt,pt_BR"
 }
