--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^10.2.0",
     "@tailwindcss/jit": "^0.1.18",
+    "@types/gtag.js": "^0.0.7",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
