--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
+    "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
     "gray-matter": "^4.0.3",
     "next": "^10.2.0",
