--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-seo": "^4.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "reading-time": "^1.4.0",
     "rehype-stringify": "^8.0.0",
     "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
