--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.65",
     "@mapbox/rehype-prism": "^0.6.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
@@ -32,6 +33,7 @@
     "@next/bundle-analyzer": "^10.2.0",
     "@tailwindcss/jit": "^0.1.18",
     "@types/gtag.js": "^0.0.7",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.2",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
