--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mapbox/rehype-prism": "^0.6.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next": "^10.2.0",
     "next-seo": "^4.24.0",
