--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "build-stats": "ANALYZE=true npm run build",
     "export": "next export -o dist",
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^11.0.0",
+    "next-sitemap": "^1.6.173",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.15",
     "prettier": "^2.3.0",
