--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.65",
     "@mapbox/rehype-prism": "^0.6.0",
+    "@openlab/vercel-netlify-cms-github": "^1.1.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next": "^10.2.0",
     "next-seo": "^4.24.0",
+    "next-sitemap": "^1.6.179",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reading-time": "^1.4.0",
